--- a/index.html
+++ b/index.html
@@ -1,213 +1,273 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Notification</title>
-    <!--Google Fonts and Icons-->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Round|Material+Icons+Sharp|Material+Icons+Two+Tone"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700;800&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        width: 100%;
-        height: 100vh;
-        margin: 0;
-        padding: 0;
+<head>
+  <meta charset="UTF-8">
+  <title>All-in-One Chat App with Push</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      max-width: 480px;
+      margin: auto;
+      background: #f5f5f5;
+      padding: 1em;
+    }
+    input, select, button {
+      width: 100%;
+      margin: 0.3em 0;
+      padding: 0.6em;
+      font-size: 1rem;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background: #4a76a8;
+      color: white;
+      font-weight: bold;
+      border: none;
+    }
+    #chat {
+      height: 250px;
+      overflow-y: auto;
+      padding: 10px;
+      background: white;
+      border: 1px solid #ccc;
+      margin-top: 1em;
+      border-radius: 5px;
+    }
+    .msg {
+      margin: 0.5em 0;
+      padding: 0.5em 1em;
+      border-radius: 10px;
+      max-width: 75%;
+    }
+    .from-me {
+      background: #dcf8c6;
+      margin-left: auto;
+      text-align: right;
+    }
+    .from-other {
+      background: #fff;
+      border: 1px solid #ddd;
+      margin-right: auto;
+      text-align: left;
+    }
+    #loginDiv, #chatDiv {
+      margin-top: 1em;
+    }
+    #chatDiv {
+      display: none;
+    }
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js"></script>
+</head>
+<body>
+
+<h2>Chat App</h2>
+
+<div id="loginDiv">
+  <input id="emailInput" type="email" placeholder="Email">
+  <input id="passwordInput" type="password" placeholder="Password">
+  <button onclick="signup()">Sign Up</button>
+  <button onclick="login()">Login</button>
+  <div id="loginMsg" style="color:red;min-height:1.5em;"></div>
+</div>
+
+<div id="chatDiv">
+  <p>
+    Logged in as <span id="currentUserEmail"></span>
+    <button onclick="logout()" style="float:right;background:#e74c3c;">Logout</button>
+  </p>
+  <select id="userSelect">
+    <option value="">Select a user</option>
+  </select>
+  <div id="chat"></div>
+  <input id="msgInput" placeholder="Type your message...">
+  <button onclick="sendMessage()">Send</button>
+</div>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyAT1SyYQTFUona0byHCi8BcrEW9pgo9BiA",
+    authDomain: "fb-acc-d2f14.firebaseapp.com",
+    databaseURL: "https://fb-acc-d2f14-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "fb-acc-d2f14",
+    storageBucket: "fb-acc-d2f14.appspot.com",
+    messagingSenderId: "225442444221",
+    appId: "1:225442444221:web:7d244ee7774ec4bc1098d4"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
+  const messaging = firebase.messaging();
+
+  let currentUser = null;
+  let selectedUser = null;
+  let chatRef = null;
+
+  const emailInput = document.getElementById('emailInput');
+  const passwordInput = document.getElementById('passwordInput');
+  const loginMsg = document.getElementById('loginMsg');
+  const currentUserEmail = document.getElementById('currentUserEmail');
+  const userSelect = document.getElementById('userSelect');
+  const chatBox = document.getElementById('chat');
+  const msgInput = document.getElementById('msgInput');
+
+  // Create and register service worker dynamically
+  const swCode = `
+    importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js');
+    importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js');
+
+    firebase.initializeApp(${JSON.stringify(firebaseConfig)});
+    const messaging = firebase.messaging();
+    messaging.onBackgroundMessage(payload => {
+      const title = payload.notification.title;
+      const options = {
+        body: payload.notification.body,
+        icon: payload.notification.icon
+      };
+      self.registration.showNotification(title, options);
+    });
+  `;
+  const blob = new Blob([swCode], { type: "application/javascript" });
+  const swUrl = URL.createObjectURL(blob);
+
+  navigator.serviceWorker.register(swUrl).then(reg => {
+    messaging.useServiceWorker(reg);
+    console.log("Service Worker registered.");
+  });
+
+  function uid(email) {
+    return btoa(email).replace(/=/g, '');
+  }
+
+  function signup() {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value.trim();
+    if (!email || !password) {
+      loginMsg.textContent = "Email and password required.";
+      return;
+    }
+    const userId = uid(email);
+    db.ref("users/" + userId).once('value').then(snapshot => {
+      if (snapshot.exists()) {
+        loginMsg.textContent = "User already exists.";
+      } else {
+        db.ref("users/" + userId).set({ email, password });
+        loginMsg.textContent = "Signed up! Please log in.";
       }
-      .center {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: rgb(246, 248, 250);
+    });
+  }
+
+  function login() {
+    const email = emailInput.value.trim();
+    const password = passwordInput.value.trim();
+    const userId = uid(email);
+    db.ref("users/" + userId).once('value').then(snapshot => {
+      const user = snapshot.val();
+      if (!user) {
+        loginMsg.textContent = "User not found.";
+      } else if (user.password !== password) {
+        loginMsg.textContent = "Wrong password.";
+      } else {
+        currentUser = { uid: userId, email };
+        currentUserEmail.textContent = email;
+        document.getElementById("loginDiv").style.display = "none";
+        document.getElementById("chatDiv").style.display = "block";
+        loadUsers();
+        messaging.getToken({ vapidKey: "YOUR_PUBLIC_VAPID_KEY" }).then(token => {
+          db.ref("users/" + userId + "/token").set(token);
+        });
       }
-      .notification {
-        position: fixed;
-        top: 15px;
-        left: 50%;
-        transform: translate(-50%, -200px);
-        background: rgb(0, 0, 0);
-        width: fit-content;
-        height: 54px;
-        box-sizing: border-box;
-        padding: 8px;
-        border-radius: 15mm;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        overflow: hidden;
-        box-shadow: rgba(38, 57, 77, 0.7) 0px 20px 30px -10px;
-        transition: 0.5s ease-in;
-        max-width: 1000px;
-      }
-      .notification img {
-        width: 32px;
-        height: 32px;
-        border-radius: 50%;
-        border: 4px solid rgb(80, 80, 80);
-        transition: 0.35s ease-in;
-      }
-      .details {
-        display: flex;
-        align-items: flex-start;
-        justify-content: center;
-        flex-direction: column;
-        font-family: poppins;
-        margin: 0 15px;
-        padding: 1px;
-        white-space: nowrap;
-      }
-      .name {
-        font-size: 12px;
-        color: rgba(255, 255, 255, 0.6);
-      }
-      .message {
-        font-size: 14px;
-        color: white;
-      }
-      .btn {
-        width: 35px;
-        height: 35px;
-        color: white;
-        background: rgba(255, 255, 255, 0.2);
-        text-align: center;
-        line-height: 35px;
-        font-size: 22px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-      .notify {
-        background: rgb(226, 230, 233);
-        width: 50px;
-        height: 50px;
-        border-radius: 50%;
-        border: none;
-        outline: none;
-        cursor: pointer;
-      }
-      .notify span {
-        font-size: 30px;
-      }
-      .notification.hidden {
-        animation: closeNote 1s ease-in-out;
-        transform: translate(-50%, -200px);
-        max-width: 54px;
-        padding: 0;
-      }
-      .notification.hidden img {
-        width: 38px;
-        height: 38px;
-        border: 8px solid rgb(80, 80, 80);
-      }
-      @keyframes closeNote {
-        0% {
-          transform: translate(-50%, 0);
-          max-width: 1000px;
-          padding: 8px;
+    });
+  }
+
+  function logout() {
+    currentUser = null;
+    selectedUser = null;
+    if (chatRef) chatRef.off();
+    chatBox.innerHTML = '';
+    document.getElementById("loginDiv").style.display = "block";
+    document.getElementById("chatDiv").style.display = "none";
+  }
+
+  function loadUsers() {
+    userSelect.innerHTML = '<option value="">Select a user</option>';
+    db.ref("users").once('value').then(snapshot => {
+      snapshot.forEach(child => {
+        if (child.key !== currentUser.uid) {
+          const opt = document.createElement("option");
+          opt.value = child.key;
+          opt.textContent = child.val().email;
+          userSelect.appendChild(opt);
         }
-        65% {
-          transform: translate(-50%, 0);
-          max-width: 54px;
-          padding: 0px;
+      });
+    });
+  }
+
+  userSelect.addEventListener("change", () => {
+    selectedUser = userSelect.value;
+    loadChat();
+  });
+
+  function loadChat() {
+    if (chatRef) chatRef.off();
+    chatBox.innerHTML = '';
+    if (!selectedUser) return;
+    const path = `messages/${currentUser.uid}/${selectedUser}`;
+    chatRef = db.ref(path);
+    chatRef.on('child_added', snap => {
+      const msg = snap.val();
+      const div = document.createElement("div");
+      div.className = "msg " + (msg.from === currentUser.uid ? "from-me" : "from-other");
+      div.textContent = msg.text;
+      chatBox.appendChild(div);
+      chatBox.scrollTop = chatBox.scrollHeight;
+    });
+  }
+
+  function sendMessage() {
+    const text = msgInput.value.trim();
+    if (!text || !selectedUser) return;
+
+    const msgObj = {
+      from: currentUser.uid,
+      to: selectedUser,
+      text,
+      timestamp: Date.now()
+    };
+
+    const newKey = db.ref().push().key;
+    const updates = {};
+    updates[`messages/${currentUser.uid}/${selectedUser}/${newKey}`] = msgObj;
+    updates[`messages/${selectedUser}/${currentUser.uid}/${newKey}`] = msgObj;
+
+    db.ref().update(updates).then(() => {
+      msgInput.value = '';
+      db.ref("users/" + selectedUser + "/token").once('value').then(snapshot => {
+        const token = snapshot.val();
+        if (token) {
+          fetch("https://fcm.googleapis.com/fcm/send", {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "Authorization": "key=YOUR_SERVER_KEY"
+            },
+            body: JSON.stringify({
+              to: token,
+              notification: {
+                title: currentUser.email,
+                body: text,
+                icon: "https://cdn-icons-png.flaticon.com/512/733/733585.png"
+              }
+            })
+          });
         }
-        100% {
-          transform: translate(-50%, -200px);
-          max-width: 54px;
-          padding: 0;
-        }
-      }
-      .notification.active {
-        animation: showNote 1s ease-in-out;
-        max-width: 1000px;
-        transform: translate(-50%, 0);
-        padding: 8px;
-      }
-      .notification.active img {
-        animation: resize 1s ease-in-out;
-        width: 32px;
-        height: 32px;
-        border: 4px solid rgb(80, 80, 80);
-      }
-      @keyframes showNote {
-        0% {
-          transform: translate(-50%, -200px);
-          max-width: 54px;
-          padding: 0;
-        }
-        35% {
-          transform: translate(-50%, 0px);
-          max-width: 54px;
-          padding: 0;
-        }
-        100% {
-          transform: translate(-50%, 0px);
-          max-width: 1000px;
-          padding: 8px;
-        }
-      }
-      @keyframes resize {
-        0%,
-        40% {
-          width: 38px;
-          height: 38px;
-          border: 8px solid rgb(80, 80, 80);
-        }
-        100% {
-          width: 32px;
-          height: 32px;
-          border: 4px solid rgb(80, 80, 80);
-        }
-      }
-    </style>
-  </head>
-  <body>
-    <div class="center">
-      <button class="notify" type="button" onclick="getNotified()">
-        <span class="material-icons-round">north</span>
-      </button>
-      <div class="notification">
-        <img src="../images/health.png" alt="" />
-        <div class="details">
-          <div class="name">Health</div>
-          <div class="message">You have reached your goals...</div>
-        </div>
-        <span class="material-icons-round btn" onclick="closeNote()"
-          >close</span
-        >
-      </div>
-    </div>
-    <script>
-      let notification = document.querySelector(".notification");
-      function getNotified() {
-        if (notification.classList.contains("hidden")) {
-          notification.classList.toggle("hidden");
-        }
-        notification.classList.toggle("active");
-        const timeout = setTimeout(() => {
-          if (
-            notification.classList.contains("active") &&
-            !notification.classList.contains("hidden")
-          ) {
-            notification.classList.toggle("active");
-            notification.classList.toggle("hidden");
-          } else {
-            window.clearTimeout(timeout);
-          }
-        }, 5000);
-      }
-      function closeNote() {
-        notification.classList.toggle("active");
-        notification.classList.toggle("hidden");
-      }
-    </script>
-  </body>
+      });
+    });
+  }
+</script>
+
+</body>
 </html>
