--- a/index.html
+++ b/index.html
@@ -1,61 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>All-in-One Chat App with Push</title>
+  <meta charset="UTF-8" />
+  <title>Messenger-Style Chat App</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
-      font-family: Arial, sans-serif;
-      max-width: 480px;
-      margin: auto;
-      background: #f5f5f5;
-      padding: 1em;
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: #1e1e1e;
+      color: white;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+    h2 {
+      text-align: center;
+      margin: 0.5em 0;
+      color: #00aaff;
     }
     input, select, button {
       width: 100%;
       margin: 0.3em 0;
       padding: 0.6em;
       font-size: 1rem;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    button {
-      background: #4a76a8;
-      color: white;
-      font-weight: bold;
+      border-radius: 8px;
       border: none;
     }
-    #chat {
-      height: 250px;
-      overflow-y: auto;
-      padding: 10px;
-      background: white;
-      border: 1px solid #ccc;
-      margin-top: 1em;
-      border-radius: 5px;
+    input, select {
+      background: #2e2e2e;
+      color: white;
+      border: 1px solid #444;
     }
-    .msg {
-      margin: 0.5em 0;
-      padding: 0.5em 1em;
-      border-radius: 10px;
-      max-width: 75%;
+    button {
+      background: #0078ff;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
     }
-    .from-me {
-      background: #dcf8c6;
-      margin-left: auto;
-      text-align: right;
-    }
-    .from-other {
-      background: #fff;
-      border: 1px solid #ddd;
-      margin-right: auto;
-      text-align: left;
+    button:hover {
+      background: #005ecb;
     }
     #loginDiv, #chatDiv {
-      margin-top: 1em;
+      padding: 1em;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      overflow-y: auto;
     }
     #chatDiv {
       display: none;
+    }
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 1em;
+      margin-bottom: 70px;
+      display: flex;
+      flex-direction: column;
+    }
+    .msg {
+      padding: 0.6em 1em;
+      border-radius: 18px;
+      margin: 0.3em 0;
+      max-width: 75%;
+      line-height: 1.4;
+      word-wrap: break-word;
+      display: inline-block;
+    }
+    .from-me {
+      background: #0078ff;
+      color: white;
+      align-self: flex-end;
+      border-bottom-right-radius: 4px;
+    }
+    .from-other {
+      background: #3a3a3a;
+      color: white;
+      align-self: flex-start;
+      border-bottom-left-radius: 4px;
+    }
+    #messageBar {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      background: #1e1e1e;
+      padding: 0.5em;
+      display: flex;
+      gap: 0.5em;
+      border-top: 1px solid #444;
+    }
+    #msgInput {
+      flex: 1;
+      padding: 0.6em;
+      border-radius: 18px;
+      border: none;
+      background: #2e2e2e;
+      color: white;
     }
   </style>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -64,7 +110,7 @@
 </head>
 <body>
 
-<h2>Chat App</h2>
+<h2>Messenger Chat</h2>
 
 <div id="loginDiv">
   <input id="emailInput" type="email" placeholder="Email">
@@ -79,11 +125,12 @@
     Logged in as <span id="currentUserEmail"></span>
     <button onclick="logout()" style="float:right;background:#e74c3c;">Logout</button>
   </p>
-  <select id="userSelect">
-    <option value="">Select a user</option>
-  </select>
+  <select id="userSelect"><option value="">Select a user</option></select>
   <div id="chat"></div>
-  <input id="msgInput" placeholder="Type your message...">
+</div>
+
+<div id="messageBar">
+  <input id="msgInput" placeholder="Type a message...">
   <button onclick="sendMessage()">Send</button>
 </div>
 
@@ -114,7 +161,7 @@
   const chatBox = document.getElementById('chat');
   const msgInput = document.getElementById('msgInput');
 
-  // Create and register service worker dynamically
+  // Service Worker for Push
   const swCode = `
     importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js');
     importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js');
@@ -132,7 +179,6 @@
   `;
   const blob = new Blob([swCode], { type: "application/javascript" });
   const swUrl = URL.createObjectURL(blob);
-
   navigator.serviceWorker.register(swUrl).then(reg => {
     messaging.useServiceWorker(reg);
     console.log("Service Worker registered.");
@@ -174,7 +220,7 @@
         currentUser = { uid: userId, email };
         currentUserEmail.textContent = email;
         document.getElementById("loginDiv").style.display = "none";
-        document.getElementById("chatDiv").style.display = "block";
+        document.getElementById("chatDiv").style.display = "flex";
         loadUsers();
         messaging.getToken({ vapidKey: "YOUR_PUBLIC_VAPID_KEY" }).then(token => {
           db.ref("users/" + userId + "/token").set(token);
