--- a/index.html
+++ b/index.html
@@ -3,26 +3,28 @@
 <head>
   <meta charset="UTF-8" />
   <title>Messenger Chat App</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="apple-touch-icon" href="icon.png" />
-  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    * {
-      box-sizing: border-box;
-    }
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      background: #1e1e1e;
+      background: #121212;
       color: white;
       display: flex;
-      flex-direction: column;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
+    }
+    .container {
+      width: 100%;
       max-width: 500px;
-      margin: auto;
-      border-left: 1px solid #444;
-      border-right: 1px solid #444;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      background: #1e1e1e;
+      border-left: 1px solid #333;
+      border-right: 1px solid #333;
     }
     h2 {
       text-align: center;
@@ -30,18 +32,18 @@
       padding: 1em;
       background: #000;
       font-size: 1.2em;
-      border-bottom: 1px solid #333;
       color: #00aaff;
+      border-bottom: 1px solid #333;
     }
     input, button {
-      width: 100%;
-      margin: 0.3em 0;
-      padding: 0.6em;
       font-size: 1rem;
-      border-radius: 8px;
+      border-radius: 10px;
       border: none;
     }
     input {
+      width: 100%;
+      margin: 0.4em 0;
+      padding: 0.8em;
       background: #2e2e2e;
       color: white;
       border: 1px solid #444;
@@ -49,146 +51,137 @@
     button {
       background: #0078ff;
       color: white;
-      font-weight: bold;
+      padding: 0.8em;
+      margin-top: 0.4em;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    button:hover {
-      background: #005ecb;
-    }
-    #loginDiv, #chatDiv {
-      padding: 1em;
+    button:hover { background: #005ecb; }
+    #loginDiv {
+      padding: 2em;
       flex: 1;
       display: flex;
       flex-direction: column;
-      overflow-y: auto;
+      justify-content: center;
     }
     #chatDiv {
       display: none;
+      flex: 1;
+      flex-direction: column;
+      overflow: hidden;
     }
-    #chatDiv > p {
-      background: #111;
-      padding: 0.6em 1em;
-      margin: 0;
-      font-size: 0.9em;
-      border-bottom: 1px solid #333;
-    }
-
     #userList {
-      max-height: 150px;
+      max-height: 120px;
       overflow-y: auto;
-      padding: 0.5em 0;
+      padding: 0.5em;
       display: flex;
       flex-direction: column;
       gap: 0.5em;
       border-bottom: 1px solid #333;
-      margin-bottom: 0.5em;
     }
-
     .user-item {
       padding: 0.6em 1em;
       background: #2a2a2a;
-      color: white;
       border-radius: 10px;
       cursor: pointer;
-      transition: background 0.3s;
     }
-    .user-item:hover {
-      background: #3a3a3a;
-    }
-    .user-item.active {
-      background: #0078ff;
-    }
-
+    .user-item.active { background: #0078ff; }
     #chat {
       flex: 1;
       overflow-y: auto;
       padding: 0.8em;
-      padding-bottom: 80px;
+      padding-bottom: 100px;
       display: flex;
       flex-direction: column;
     }
-
     .msg {
       padding: 0.7em 1em;
       border-radius: 18px;
       margin: 0.3em 0;
       max-width: 75%;
-      line-height: 1.4;
-      word-wrap: break-word;
-      display: inline-block;
       font-size: 0.95em;
-      box-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+      word-wrap: break-word;
     }
-
-    .from-me {
-      background: #0078ff;
-      color: white;
+    .msg img, .msg video {
+      max-width: 100%;
+      border-radius: 10px;
+      margin-top: 0.4em;
+    }
+    .from-me { background: #0078ff; color: white; align-self: flex-end; }
+    .from-other { background: #3a3a3a; align-self: flex-start; }
+    .loading-msg {
+      font-size: 0.9em;
+      color: #aaa;
+      font-style: italic;
+      margin: 0.5em 0;
       align-self: flex-end;
-      border-bottom-right-radius: 4px;
     }
-
-    .from-other {
-      background: #3a3a3a;
-      color: white;
-      align-self: flex-start;
-      border-bottom-left-radius: 4px;
-    }
-
     #messageBar {
       position: fixed;
       bottom: 0;
       left: 0;
       right: 0;
-      background: #1e1e1e;
-      padding: 0.5em;
-      display: flex;
-      gap: 0.5em;
-      border-top: 1px solid #444;
-      max-width: 500px;
       margin: auto;
+      background: #1e1e1e;
+      border-top: 1px solid #444;
+      display: none;
+      align-items: center;
+      justify-content: center;
+      gap: 0.5em;
+      padding: 0.5em;
+      max-width: 500px;
     }
-
     #msgInput {
       flex: 1;
-      padding: 0.6em;
-      border-radius: 18px;
-      border: none;
+      padding: 0.9em 1em;
+      border-radius: 25px;
       background: #2e2e2e;
+      border: none;
       color: white;
       font-size: 1rem;
     }
+    #uploadBtn, #sendBtn {
+      background: #444;
+      color: white;
+      width: 36px;
+      height: 36px;
+      border-radius: 50%;
+      font-size: 1.2rem;
+      border: none;
+      cursor: pointer;
+    }
+    #fileInput { display: none; }
   </style>
 
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-database-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
 </head>
 <body>
-
-<h2>Messenger Chat</h2>
-
-<div id="loginDiv">
-  <input id="emailInput" type="email" placeholder="Email">
-  <input id="passwordInput" type="password" placeholder="Password">
-  <button onclick="signup()">Sign Up</button>
-  <button onclick="login()">Login</button>
-  <div id="loginMsg" style="color:red;min-height:1.5em;"></div>
-</div>
-
-<div id="chatDiv">
-  <p>
-    Logged in as <span id="currentUserEmail"></span>
-    <button onclick="logout()" style="float:right;background:#e74c3c;">Logout</button>
-  </p>
-  <div id="userList"></div>
-  <div id="chat"></div>
+<div class="container">
+  <h2>Messenger Chat</h2>
+  <div id="loginDiv">
+    <input id="emailInput" type="email" placeholder="Email">
+    <input id="passwordInput" type="password" placeholder="Password">
+    <button onclick="signup()">Sign Up</button>
+    <button onclick="login()">Login</button>
+    <div id="loginMsg" style="color:red;min-height:1.5em;"></div>
+  </div>
+  <div id="chatDiv">
+    <p style="padding:0.5em">
+      Logged in as <span id="currentUserEmail"></span>
+      <button onclick="logout()" style="float:right;background:#e74c3c;">Logout</button>
+    </p>
+    <div id="userList"></div>
+    <div id="chat"></div>
+  </div>
 </div>
 
 <div id="messageBar">
   <input id="msgInput" placeholder="Type a message...">
-  <button onclick="sendMessage()">Send</button>
+  <input type="file" id="fileInput" accept="image/*,video/*" onchange="sendMedia()">
+  <button id="uploadBtn" onclick="document.getElementById('fileInput').click()">📎</button>
+  <button id="sendBtn" onclick="sendMessage()">➤</button>
 </div>
 
 <script>
@@ -204,7 +197,7 @@
 
   firebase.initializeApp(firebaseConfig);
   const db = firebase.database();
-  const messaging = firebase.messaging();
+  const storage = firebase.storage();
 
   let currentUser = null;
   let selectedUser = null;
@@ -213,31 +206,8 @@
   const emailInput = document.getElementById('emailInput');
   const passwordInput = document.getElementById('passwordInput');
   const loginMsg = document.getElementById('loginMsg');
-  const currentUserEmail = document.getElementById('currentUserEmail');
   const chatBox = document.getElementById('chat');
   const msgInput = document.getElementById('msgInput');
-
-  const swCode = `
-    importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js');
-    importScripts('https://www.gstatic.com/firebasejs/9.22.0/firebase-messaging-compat.js');
-
-    firebase.initializeApp(${JSON.stringify(firebaseConfig)});
-    const messaging = firebase.messaging();
-    messaging.onBackgroundMessage(payload => {
-      const title = payload.notification.title;
-      const options = {
-        body: payload.notification.body,
-        icon: payload.notification.icon
-      };
-      self.registration.showNotification(title, options);
-    });
-  `;
-  const blob = new Blob([swCode], { type: "application/javascript" });
-  const swUrl = URL.createObjectURL(blob);
-  navigator.serviceWorker.register(swUrl).then(reg => {
-    messaging.useServiceWorker(reg);
-    console.log("Service Worker registered.");
-  });
 
   function uid(email) {
     return btoa(email).replace(/=/g, '');
@@ -246,10 +216,6 @@
   function signup() {
     const email = emailInput.value.trim();
     const password = passwordInput.value.trim();
-    if (!email || !password) {
-      loginMsg.textContent = "Email and password required.";
-      return;
-    }
     const userId = uid(email);
     db.ref("users/" + userId).once('value').then(snapshot => {
       if (snapshot.exists()) {
@@ -257,6 +223,8 @@
       } else {
         db.ref("users/" + userId).set({ email, password });
         loginMsg.textContent = "Signed up! Please log in.";
+        emailInput.value = "";
+        passwordInput.value = "";
       }
     });
   }
@@ -273,13 +241,11 @@
         loginMsg.textContent = "Wrong password.";
       } else {
         currentUser = { uid: userId, email };
-        currentUserEmail.textContent = email;
+        document.getElementById('currentUserEmail').textContent = email;
         document.getElementById("loginDiv").style.display = "none";
         document.getElementById("chatDiv").style.display = "flex";
+        document.getElementById("messageBar").style.display = "flex";
         loadUsers();
-        messaging.getToken({ vapidKey: "YOUR_PUBLIC_VAPID_KEY" }).then(token => {
-          db.ref("users/" + userId + "/token").set(token);
-        });
       }
     });
   }
@@ -289,8 +255,12 @@
     selectedUser = null;
     if (chatRef) chatRef.off();
     chatBox.innerHTML = '';
-    document.getElementById("loginDiv").style.display = "block";
+    document.getElementById("loginDiv").style.display = "flex";
     document.getElementById("chatDiv").style.display = "none";
+    document.getElementById("messageBar").style.display = "none";
+    emailInput.value = "";
+    passwordInput.value = "";
+    loginMsg.textContent = "";
   }
 
   function loadUsers() {
@@ -325,7 +295,20 @@
       const msg = snap.val();
       const div = document.createElement("div");
       div.className = "msg " + (msg.from === currentUser.uid ? "from-me" : "from-other");
-      div.textContent = msg.text;
+      if (msg.text) div.textContent = msg.text;
+      if (msg.imageUrl) {
+        const img = document.createElement("img");
+        img.src = msg.imageUrl;
+        div.innerHTML = '';
+        div.appendChild(img);
+      }
+      if (msg.videoUrl) {
+        const video = document.createElement("video");
+        video.src = msg.videoUrl;
+        video.controls = true;
+        div.innerHTML = '';
+        div.appendChild(video);
+      }
       chatBox.appendChild(div);
       chatBox.scrollTop = chatBox.scrollHeight;
     });
@@ -349,29 +332,54 @@
 
     db.ref().update(updates).then(() => {
       msgInput.value = '';
-      db.ref("users/" + selectedUser + "/token").once('value').then(snapshot => {
-        const token = snapshot.val();
-        if (token) {
-          fetch("https://fcm.googleapis.com/fcm/send", {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              "Authorization": "key=YOUR_SERVER_KEY"
-            },
-            body: JSON.stringify({
-              to: token,
-              notification: {
-                title: currentUser.email,
-                body: text,
-                icon: "https://cdn-icons-png.flaticon.com/512/733/733585.png"
-              }
-            })
-          });
-        }
-      });
     });
   }
-</script>
 
+  function sendMedia() {
+    const file = document.getElementById('fileInput').files[0];
+    if (!file || !selectedUser) return;
+
+    const fileName = `${Date.now()}_${file.name}`;
+    const storageRef = storage.ref().child(`chat_media/${fileName}`);
+
+    const loadingDiv = document.createElement("div");
+    loadingDiv.className = "loading-msg";
+    loadingDiv.textContent = "Uploading: 0%";
+    chatBox.appendChild(loadingDiv);
+    chatBox.scrollTop = chatBox.scrollHeight;
+
+    const uploadTask = storageRef.put(file);
+    uploadTask.on('state_changed',
+      snapshot => {
+        const progress = Math.floor((snapshot.bytesTransferred / snapshot.totalBytes) * 100);
+        loadingDiv.textContent = `Uploading: ${progress}%`;
+      },
+      error => {
+        loadingDiv.textContent = "Upload failed!";
+        console.error(error);
+      },
+      () => {
+        uploadTask.snapshot.ref.getDownloadURL().then(downloadURL => {
+          const newKey = db.ref().push().key;
+          const msgObj = {
+            from: currentUser.uid,
+            to: selectedUser,
+            timestamp: Date.now()
+          };
+          if (file.type.startsWith("image")) msgObj.imageUrl = downloadURL;
+          if (file.type.startsWith("video")) msgObj.videoUrl = downloadURL;
+
+          const updates = {};
+          updates[`messages/${currentUser.uid}/${selectedUser}/${newKey}`] = msgObj;
+          updates[`messages/${selectedUser}/${currentUser.uid}/${newKey}`] = msgObj;
+
+          db.ref().update(updates).then(() => {
+            loadingDiv.remove();
+          });
+        });
+      }
+    );
+  }
+</script>
 </body>
 </html>
